--- a/pages/login.css
+++ b/pages/login.css
@@ -34,3 +34,9 @@ button {
 button:hover {
   background-color: #45a049;
 }
+
+div#center-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
