--- a/pages/login.css
+++ b/pages/login.css
@@ -36,7 +36,6 @@ button:hover {
 }
 
 .center-container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  padding-top: 50%;
+  padding-left: 50%;
 }
