--- a/pages/contact.css
+++ b/pages/contact.css
@@ -1,4 +1,4 @@
-form {
+/* form {
     max-width: 400px;
     width: 100%;
     padding: 20px;
@@ -39,4 +39,36 @@ form {
     resize: none;
     size: 100%;
     
- }
+ } */
+
+ .contact-container {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .contact-info {
+    width: 600px;
+  }
+  
+  .contact-form {
+    width: 300px; /* Ajusta el ancho según tus necesidades */
+  }
+  
+  .contact-form form {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .contact-form label {
+    margin-bottom: 5px;
+  }
+  
+  .contact-form input,
+  .contact-form textarea {
+    margin-bottom: 10px;
+  }
+  
+  .contact-form button {
+    width: 100px; /* Ajusta el ancho según tus necesidades */
+  }
+  
